added ingredients and titles + 20 epochs

--- a/src/fine_tune.ipynb
+++ b/src/fine_tune.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,31 +72,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_train = pd.DataFrame({\"label\":train[\"type\"], \"text\":train[\"recette\"]}) \n",
-    "f_test = pd.DataFrame({\"label\":test[\"type\"], \"text\":test[\"recette\"]})"
+    "f_train = pd.DataFrame({\"label\":train[\"type\"], \"text\":train[\"titre\"]}) \n",
+    "f_test = pd.DataFrame({\"label\":test[\"type\"], \"text\":test[\"titre\"]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_test[\"label\"].loc[f_test[\"label\"] == 'Plat principal'] = 2\n",
-    "f_test[\"label\"].loc[f_test[\"label\"] == 'Entrée'] = 1\n",
-    "f_test[\"label\"].loc[f_test[\"label\"] == 'Dessert'] = 3\n",
-    "f_train[\"label\"].loc[f_train[\"label\"] == 'Plat principal'] = 2\n",
-    "f_train[\"label\"].loc[f_train[\"label\"] == 'Entrée'] = 1\n",
-    "f_train[\"label\"].loc[f_train[\"label\"] == 'Dessert'] = 3"
+    "f_test[\"label\"].loc[f_test[\"label\"] == 'Plat principal'] = 1\n",
+    "f_test[\"label\"].loc[f_test[\"label\"] == 'Entrée'] = 0\n",
+    "f_test[\"label\"].loc[f_test[\"label\"] == 'Dessert'] = 2\n",
+    "f_train[\"label\"].loc[f_train[\"label\"] == 'Plat principal'] = 1\n",
+    "f_train[\"label\"].loc[f_train[\"label\"] == 'Entrée'] = 0\n",
+    "f_train[\"label\"].loc[f_train[\"label\"] == 'Dessert'] = 2"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -127,43 +132,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Préchauffer le four à 170°C (thermostat 5).Fai...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gratin de brocoli et lardons</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Dans une cocotte, verser l'eau, les oignons et...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Langoustines à la crème</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Couper le filet de dinde en gros morceau (comm...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Filet de dinde aux asperges</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Mélanger le sucre, l'angélique, le beurre fond...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Gâteau marandais</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Cuire les artichauts dans l'eau bouillante pen...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Tarte à l'artichaut</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  label                                               text\n",
-       "0     2  Préchauffer le four à 170°C (thermostat 5).Fai...\n",
-       "1     1  Dans une cocotte, verser l'eau, les oignons et...\n",
-       "2     2  Couper le filet de dinde en gros morceau (comm...\n",
-       "3     3  Mélanger le sucre, l'angélique, le beurre fond...\n",
-       "4     1  Cuire les artichauts dans l'eau bouillante pen..."
+       "  label                          text\n",
+       "0     1  Gratin de brocoli et lardons\n",
+       "1     0       Langoustines à la crème\n",
+       "2     1   Filet de dinde aux asperges\n",
+       "3     2              Gâteau marandais\n",
+       "4     0           Tarte à l'artichaut"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "f_train.head()\n",
-    "f_train.to_csv(\"../data/distilbert/train.csv\", index=False)\n",
-    "f_test.to_csv(\"../data/distilbert/dev.csv\", index=False)"
+    "f_train.to_csv(\"../data/distilbert/titres/train.csv\", index=False)\n",
+    "f_test.to_csv(\"../data/distilbert/titres/dev.csv\", index=False)"
    ]
   },
   {
@@ -207,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
