--- a/src/tf_idf.ipynb
+++ b/src/tf_idf.ipynb
@@ -540,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test smote sur train +dev\n"
+    "TF-IDF + RANDOM FOREST + SMOTE sur les donnée  train et dev\n"
    ]
   },
   {
@@ -634,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test smote sur dff"
+    "TF-IDF + RANDOM FOREST + SMOTE sur les donnée finaux"
    ]
   },
   {
@@ -729,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TFI-DF + KNN"
+    "TFI-DF + KNN sur donnée train et dev"
    ]
   },
   {
@@ -774,6 +774,13 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TFI-DF + KNN sur donnée finaux"
    ]
   },
   {
@@ -850,6 +857,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TF-IDF + KNN + SMOTE sur donnée train et dev"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Nous pouvons observer que le classifieur KNN parvient à mieux distinguer les plats des entrées grâce à son approche basée sur la proximité des voisins dans l'espace des caractéristiques."
    ]
   },
@@ -905,13 +919,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TF-IDF + KNN + SMOTE"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
@@ -938,6 +945,13 @@
     "plt.ylabel('True labels')\n",
     "plt.title('Confusion Matrix')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TF-IDF + KNN + SMOTE sur donnée finaux"
    ]
   },
   {
@@ -1034,7 +1048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Normalisation des recette"
+    "Normalisation des recettes\n"
    ]
   },
   {
@@ -1322,7 +1336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TF-IDF + KNN + Normalisation + SMOTE"
+    "TF-IDF + KNN + Normalisation + SMOTE sur donnée train et dev"
    ]
   },
   {
@@ -1393,16 +1407,23 @@
     }
    ],
    "source": [
-    "# Step 8: Print the confusion matrix\n",
+    "#  matrice de  confusion\n",
     "conf_matrix = confusion_matrix(df_test['type'], Y_pred)\n",
     "\n",
-    "# Visualizing the confusion matrix\n",
+    "\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(conf_matrix, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=clf.classes_, yticklabels=clf.classes_)\n",
     "plt.xlabel('Predicted labels')\n",
     "plt.ylabel('True labels')\n",
     "plt.title('Confusion Matrix')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TF-IDF + KNN + Normalisation + SMOTE sur donnée finaux"
    ]
   },
   {
@@ -1473,10 +1494,10 @@
     }
    ],
    "source": [
-    "# Step 8: Print the confusion matrix\n",
+    "#confusion matrix\n",
     "conf_matrix = confusion_matrix(dff_Y, Y_pred)\n",
     "\n",
-    "# Visualizing the confusion matrix\n",
+    "\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(conf_matrix, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=clf.classes_, yticklabels=clf.classes_)\n",
     "plt.xlabel('Predicted labels')\n",
@@ -1489,7 +1510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TF-IDF + Random Forest + Normalisation"
+    "TF-IDF + Random Forest + Normalisation sur train + dev"
    ]
   },
   {
@@ -1531,6 +1552,13 @@
     "\n",
     "#4. print the classfication report\n",
     "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TF-IDF + Random Forest + Normalisation sur les donnée finaux"
    ]
   },
   {
@@ -1578,7 +1606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TF-IDF + random forest + Normalisation + SMOTE"
+    "TF-IDF + random forest + Normalisation + SMOTE sur train + dev"
    ]
   },
   {
@@ -1630,6 +1658,13 @@
     "\n",
     "# Step 8: Print the classification report\n",
     "print(classification_report(df_test['type'], Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TF-IDF + random forest + Normalisation + SMOTE sur les donnée finaux"
    ]
   },
   {
